# phlash

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  test.yml  update_latest_tag.yml
docs/: conf.py  index.rst
notebooks/: example.md
src/eastbay/: __init__.py  cband.py  data.py  gpu.py  hmm.py  jax_ppoly.py  liveplot.py  log.py  mcmc.py  memory.py  model.py  params.py  plot.py  sim.py  size_history.py  transition.py
src/phlash/: __init__.py  afs.py  cband.py  data.py  gpu.py  hmm.py  jax_ppoly.py  kernel.py  liveplot.py  mcmc.py  memory.py  model.py  mp.py  params.py  pattern.py  plot.py  psmc.py  sim.py  size_history.py  transition.py  util.py
src/phlash/fit/: base.py  demes.py  seq.py  ts.py
src/phlash/ld/: __init__.py  data.py  expected.py  stats.py
src/phlash/likelihood/: arg.py
tests/: conftest.py  test_afs.py  test_cband.py  test_data.py  test_fit.py  test_gpu.py  test_hmm.py  test_jax_ppoly.py  test_ld.py  test_mcmc.py  test_model.py  test_ppoly.py  test_sim.py  test_size_history.py  test_skeleton.py  test_transition.py  test_util.py
tests/fixtures/: sample.bcf  sample.bcf.csi  sample.psmcfa  tv_bug.pkl
