[project]
name = "phlash"
dynamic = ["version"]
description = "Bayesian inference of population size history from recombining sequence data."
authors = [
    {name = "Jonathan Terhorst", email = "jonth@umich.edu"},
]
dependencies = [
    "blackjax<2.0.0,>=1.1.0",
    "intervaltree<4.0.0,>=3.1.0",
    "jax>=0.4.25",
    "loguru<1.0.0,>=0.7.2",
    "matplotlib<4.0.0,>=3.8.2",
    "msprime<2.0.0,>=1.3.0",
    "numpy<2.0.0,>=1.26.3",
    "optax<1.0.0,>=0.1.9",
    "plotly<6.0.0,>=5.18.0",
    "scipy<2.0.0,>=1.12.0",
    "stdpopsim<1.0.0,>=0.2.0",
    "tqdm<5.0.0,>=4.66.1",
    "tskit<1.0.0,>=0.5.6",
    "demes<1.0.0,>=0.2.3",
    "jax-dataclasses<2.0.0,>=1.6.0",
    "tszip<1.0.0,>=0.2.3",
    "jaxtyping<1.0.0,>=0.2.25",
    "pulp>=2.8.0",
    "pysam>=0.22.1",
    "scienceplots>=2.1.1",
    "numcodecs==0.15.1",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/jthlab/phlash"
"Bug Reports" = "https://github.com/jthlab/phlash/issues"
"Source" = "https://github.com/jthlab/phlash/"

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4.25",
    "cuda-python<13,>=12.3",
    "nvidia-cuda-nvrtc-cu12>=12.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.3",
]

[tool.isort]
profile = "black"
known_first_party = "phlash"

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ['E203', 'W503', 'F722', 'F821']
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = ['.git', 'build', 'dist', 'venv', 'lib', 'docs', 'notebooks']
# some environment variables need to be set before loading jax
per-file-ignores = ['src/phlash/__init__.py:E402']

[tool.coverage.run]
branch = true
source = ['src/phlash']

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
select = ["NPY201"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
