[project]
name = "phlash"
version = "1.0.6"
description = "Bayesian inference of population size history from recombining sequence data."
authors = [
    {name = "Jonathan Terhorst", email = "jonth@umich.edu"},
]
dependencies = [
    "blackjax<2.0.0,>=1.1.0",
    "intervaltree<4.0.0,>=3.1.0",
    "jax>=0.4.25,<0.6.0",
    "loguru<1.0.0,>=0.7.2",
    "matplotlib<4.0.0,>=3.8.2",
    "msprime>=1.3.2",
    "numpy>1.25",
    "optax<1.0.0,>=0.1.9",
    "plotly>=6",
    "scipy<2.0.0,>=1.12.0",
    "stdpopsim<1.0.0,>=0.2.0",
    "tqdm<5.0.0,>=4.66.1",
    "tskit>=0.5.8",
    "demes<1.0.0,>=0.2.3",
    "jax-dataclasses<2.0.0,>=1.6.0",
    "tszip<1.0.0,>=0.2.3",
    "jaxtyping<1.0.0,>=0.2.25",
    "pulp>=2.8.0",
    "pysam>=0.22.1",
    "scienceplots>=2.1.1",
    "numcodecs<0.16",
]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/jthlab/phlash"
"Bug Reports" = "https://github.com/jthlab/phlash/issues"
"Source" = "https://github.com/jthlab/phlash/"

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4.25,<0.6.0",
    "cuda-python<13,>=12.3",
    "nvidia-cuda-nvrtc-cu12>=12.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
select = ["NPY201"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "notebook>=7.4.5",
    "pytest>=8.4.2",
]
